# chess

./: .gitignore  CMakeLists.txt  README.md  compile.sh  main.cpp  piece.cpp  piece.hpp  point.cpp  point.hpp  position.cpp  position.hpp  types.hpp
applications/: CMakeLists.txt  main.cpp
chess/: CMakeLists.txt  board.cpp  board.hpp  evaluate.cpp  evaluate.hpp  piece.cpp  piece.hpp  point.cpp  point.hpp  position.cpp  position.hpp  types.cpp  types.hpp
data/: results
scripts/: benchmark  gen_README.sh  run.sh
